# fundoubler

./: Cargo.toml  LICENSE-MIT  README.md
src/: check.rs  init.rs  main.rs
