[package]
name = "fundoubler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono          = "0.4"
confy           = "0.6"
hex-literal     = "0.4"
itertools       = "0.12"
md5             = "0.7"
multimap        = "0.10"
serde           = { version = "1.0", features = ["derive"] }
sha2            = "0.10"
serde_derive    = "1.0"
simple-log      = "1.6"
structopt       = "0.3"
walkdir         = "2.4"
